hphp/hack/test/typecheck/bad_contra_pos_test.php.exp
File "bad_contra_pos_test.php", line 20, characters 24-32:
Invalid argument (Typing[4110])
File "bad_contra_pos_test.php", line 11, characters 25-25:
Expected I
File "bad_contra_pos_test.php", line 15, characters 11-12:
But got null
